# HE-SecureNetParallelism

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  requirements.txt
dataset/breast_cancer/: x_test.out  x_train.out  y_train.out
examples/: CMakeLists.txt  l2r_test.cpp  model_a_e2e.cpp  model_b.cpp  model_b_bc_4layer.cpp  model_b_bc_dual_rt.cpp  model_b_bc_parallel.cpp  model_b_bc_parallel.cpp.bak  model_b_bc_pipeline.cpp  model_b_breast_cancer.cpp  model_c.cpp  model_d.cpp  pbs_test.cpp  softmax_test.cpp  test_update_isolated.cc
onnx/: model_b.onnx  model_c.onnx  model_d.onnx
parser/: parse.py
pegasus/: gateboot.cc  gateboot.h  pegasus_runtime.cc  pegasus_runtime.h  repack.cc  runtime.cc  runtime.h  utils.cc
python/: model_b.py  model_c.py  model_d.py
